--- a/index.html
+++ b/index.html
@@ -28,27 +28,14 @@
     img.active {
       display: block;
     }
-    button {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-      background-color: #007acc;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-    button:hover {
-      background-color: #005f99;
-    }
   </style>
 </head>
 <body>
   <div id="image-container">
     <img id="image1" class="active" src="turtlepus1.png" alt="Turtlepus 1">
     <img id="image2" src="turtlepus2.png" alt="Turtlepus 2">
+    <img id="image3" src="turtlepus3.png" alt="Turtlepus 3">
   </div>
-  <button onclick="switchImage()">Switch Image</button>
 
   <script>
     let currentImageIndex = 0;
@@ -59,6 +46,9 @@
       currentImageIndex = (currentImageIndex + 1) % images.length;
       images[currentImageIndex].classList.add('active');
     }
+
+    // Attach the click event to the entire body
+    document.body.addEventListener('click', switchImage);
   </script>
 </body>
 </html>
