--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 </head>
 <body>
   <div id="image-container">
-    <img id="image1" class="active" src="turtlepus1.png" alt="Turtlepus 1">
-    <img id="image2" src="turtlepus2.png" alt="Turtlepus 2">
-    <img id="image3" src="turtlepus3.png" alt="Turtlepus 3">
+    <img id="image1" class="active" src="./turtlepus1.png" alt="Turtlepus Uno">
+    <img id="image2" src="./turtlepus2.png" alt="Turtlepus Duo">
+    <img id="image3" src="./turtlepus3.png" alt="Turtlepus Thres">
   </div>
 
   <script>
