--- a/index.html
+++ b/index.html
@@ -3,39 +3,81 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Turtlepus Viewer</title>
+  <title>Meet the Turtlepus!</title>
   <style>
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
       margin: 0;
-      background-color: #f0f8ff;
-      font-family: Arial, sans-serif;
-      overflow: hidden; /* Prevent default scrolling behavior */
+      padding: 0;
+      background: linear-gradient(to bottom, #a2d9ff, #80c2ff);
+      font-family: 'Comic Sans MS', cursive, sans-serif;
+      color: #ffffff;
+      text-align: center;
+      overflow: hidden; /* Prevent page scroll */
+    }
+    #container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
+    h1 {
+      font-size: 3rem;
+      margin: 0.5rem 0;
+      text-shadow: 2px 2px #005f99;
+    }
+    p {
+      font-size: 1.5rem;
+      margin: 0.5rem 0;
     }
     #image-container {
       position: relative;
       width: 60%;
-      max-width: 600px;
+      max-width: 400px;
+      margin: 1rem 0;
     }
     img {
       width: 100%;
       height: auto;
-      border-radius: 10px;
+      border: 4px solid #ffffff;
+      border-radius: 15px;
       display: none;
+      box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     }
     img.active {
       display: block;
     }
+    .cta {
+      font-size: 1.2rem;
+      background-color: #007acc;
+      color: #ffffff;
+      padding: 10px 20px;
+      border-radius: 5px;
+      text-decoration: none;
+      box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+      cursor: pointer;
+    }
+    .cta:hover {
+      background-color: #005f99;
+    }
+    .hint {
+      margin-top: 1rem;
+      font-size: 1.2rem;
+    }
   </style>
 </head>
 <body>
-  <div id="image-container">
-    <img id="image1" class="active" src="./turtlepus1.png" alt="Turtlepus 1">
-    <img id="image2" src="./turtlepus2.png" alt="Turtlepus 2">
-    <img id="image3" src="./turtlepus3.png" alt="Turtlepus 3">
+  <div id="container">
+    <h1>🐢 Meet the Turtlepus 🐙</h1>
+    <p>When a turtle meets an octopus, magic happens. Behold: the Turtlepus!</p>
+    <p>Click anywhere or scroll to see their many forms.</p>
+    <div id="image-container">
+      <img id="image1" class="active" src="./turtlepus1.png" alt="Turtlepus 1">
+      <img id="image2" src="./turtlepus2.png" alt="Turtlepus 2">
+      <img id="image3" src="./turtlepus3.png" alt="Turtlepus 3">
+    </div>
+    <a class="cta" onclick="alert('You discovered the Turtlepus secret!')">What is a Turtlepus?</a>
+    <p class="hint">(Hint: It’s a turtle + octopus 🐢 + 🐙)</p>
   </div>
 
   <script>
@@ -48,18 +90,9 @@
       images[currentImageIndex].classList.add('active');
     }
 
-    // Handle scroll and click events
-    function handleInteraction(event) {
-      // Prevent the default scroll action (optional for full control)
-      if (event.type === "scroll") {
-        window.scrollTo(0, 0); // Keep the page at the top
-      }
-      switchImage();
-    }
-
-    // Add event listeners for click and scroll
-    document.body.addEventListener('click', handleInteraction);
-    document.body.addEventListener('scroll', handleInteraction);
+    // Add click and scroll event listeners
+    document.body.addEventListener('click', switchImage);
+    document.body.addEventListener('scroll', switchImage);
   </script>
 </body>
 </html>
